# cli_csv

./: Cargo.toml  output.json
assert/: test.csv
src/: lib.rs  main.rs  opts.rs  process.rs
src/process/: csv_convert.rs  gen_pass.rs
