[package]
name = "cli_app"
version = "0.1.0"
edition = "2024"
authors = ["looksaw <looksaw@iCloud.com>"]


[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.50", features = ["derive"] }
csv = "1.4.0" 
rand = "0.9.2"
serde = { version = "1.0.228" , features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
toml = "0.9.8"
